--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
-    <button id="checkPage">Check this page now!</button>
-    <script src="background.js" async defer></script>
+    <h3>Have a smile!</h3>
+
+    <script src="functional.js"></script>
   </body>
 </html>
