--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h3>Have a smile!</h3>
+    <!-- <h3>Have a smile!</h3> -->
 
     <script src="functional.js"></script>
   </body>
